--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/" />
+        <link rel="icon" type="image/svg+xml" href="./img/favicon/PG.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio | Paola González</title>
+        <title>Paola González | Portfolio</title>
     </head>
     <body>
         <div id="root"></div>
+
         <script type="module" src="/src/main.jsx"></script>
+        <!-- <script src="//embed.typeform.com/next/embed.js"></script> -->
     </body>
 </html>
