--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="./img/favicon/PG.webp"  />
@@ -9,7 +9,7 @@
     <body>
         <div id="root"></div>
 
-        <script type="module" src="/src/main.jsx"></script>
+        <script type="module" src="/src/index.jsx"></script>
         <!-- <script src="//embed.typeform.com/next/embed.js"></script> -->
     </body>
 </html>
